--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Test-Approvals
 
-0.0.1   Feb 01, 2013
+0.0.4   April 28, 2013
+		Intallation bug fixes.
+
+0.0.3   Feb 01, 2013
         First version, released on an unsuspecting world.
 
