--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Test-Approvals
 
 0.0.4   April 28, 2013
-		Intallation bug fixes.
+		Installation bug fixes.
 
 0.0.3   Feb 01, 2013
         First version, released on an unsuspecting world.
