--- a/README
+++ b/README
@@ -19,8 +19,18 @@ view the test results in one of many popular diff utilities.
 
 INSTALLATION
 
-To install this module, run the following commands:
+From CPAN (http://search.cpan.org/~jrcounts/Test-Approvals/):
 
+	cpan install Test::Approvals
+
+From PPM (http://code.activestate.com/ppm/Test-Approvals/):
+
+	ppm install Test::Approvals
+
+From source:
+
+	git clone https://github.com/approvals/Perl-Test-Approvals.git
+	cd Perl-Test-Approvals
 	perl Build.PL
 	./Build
 	./Build test
@@ -49,7 +59,7 @@ Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-    L<http://www.apache.org/licenses/LICENSE-2.0>
+    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
